# dns-mail-discover

./: Cargo.toml  Makefile  README.md
.github/workflows/: release.yaml  test.yaml
src/: client.rs  dns.rs  error.rs  lib.rs  query.rs  server.rs
src/tcp/: client.rs  mod.rs
