[package]
name = "dns-mail-discover"
version = "0.2.7"
edition = "2021"

description = "A dns based mail server discovery crate."
license = "MIT"

documentation = "https://docs.dust.email/packages/dns-mail-discover"
repository = "https://github.com/Dust-Mail/dns-mail-discover"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
trust-dns-resolver = "0.22.0"
async-std-resolver = { version = "0.22.0", optional = true }
tokio = {version = "1.36.0", default-features = false, features = ["net", "macros"], optional = true }
async-native-tls = { version = "0.5.0", default-features = false }
async-std = { version = "1.12.0",  features = ["attributes"], optional = true}

[dev-dependencies]
env_logger = "0.10.0"

[features]
default = ["runtime-tokio"]

runtime-tokio = ["async-native-tls/runtime-tokio", "dep:tokio"]
runtime-async-std = ["async-native-tls/runtime-async-std", "dep:async-std-resolver", "dep:async-std"]

